# LAN-ClipSync

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
docs/: FEATURES.md  REQUIREMENTS.md
res/: app.rc
src/: Application.cpp  Application.h  ClipboardManager.cpp  ClipboardManager.h  JsonUtil.cpp  JsonUtil.h  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  PeerConfig.cpp  PeerConfig.h  PeerSettingsDialog.cpp  PeerSettingsDialog.h  QrDecoder.cpp  QrDecoder.h  QrDialog.cpp  QrDialog.h  QrRender.cpp  QrRender.h  SingleInstance.cpp  SingleInstance.h  ThreadUtil.cpp  ThreadUtil.h  UiTheme.cpp  UiTheme.h  app.manifest  main.cpp
tools/: BuildIcon.cs
